# stringbench

./: Cargo.toml  text.txt
src/: main.rs
