[package]
name = "string_matching"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = { git = "https://github.com/hedonhermdev/rayon", branch = "adaptive" }
# rayon = { path = "/Users/hedonhermdev/src/github.com/rayon-rs/rayon" }
tracing = "0.1.26"
fast-tracer = { git = "https://github.com/wagnerf42/fast-tracer" }
bare_metal_modulo = "0.7.0"
num = "0.4.0"
